--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>$BASED TRUMP</title>
+    <title>$BASEDTRUMP</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/images/wer-removebg-preview.png" sizes="any" type="image/png" />
@@ -23,10 +23,10 @@
             </label>
             <input type="checkbox" id="menu-icon-checkbox" class="menu-icon" style="display:none;">
             <ul class="menu">
-                <li><a href="https://sologenic.org/trade?market=534F4C4F00000000000000000000000000000000%2BrsoLo2S1kiGeCcn6hCUXVrCpGMWLrRrLZz%2FBASE">Uniswap</a></li>
+                <li><a href="https://app.uniswap.org/">Uniswap</a></li>
                 <li><a href="#tokenomics-roadmap">Tokenomics</a></li>
-                <li><a href="https://t.me/BASED TRUMPBASE">Telegram</a></li>
-                <li><a href="https://x.com/BASED TRUMPBASE">Twitter</a></li>
+                <li><a href="https://t.me/BasedTrumpOnBase">Telegram</a></li>
+                <li><a href="https://x.com/0x47basedtrump?s=21">Twitter</a></li>
             </ul>
         </div>
     </nav>
@@ -39,7 +39,7 @@
                 <div class="ml-auto gap-5 lg:gap-10 flex color-white max-lg:hidden">
 
 
-                    <a href="https://sologenic.org/trade?market=534F4C4F00000000000000000000000000000000%2BrsoLo2S1kiGeCcn6hCUXVrCpGMWLrRrLZz%2FBASE" style="border-radius: 40px; color: white; width: fit-content;" class="cursor-pointer font-medium hover:text-n-300 transition-all">
+                    <a href="https://app.uniswap.org/" style="border-radius: 40px; color: white; width: fit-content;" class="cursor-pointer font-medium hover:text-n-300 transition-all">
                             &nbsp; Uniswap &nbsp;
                         </a>
 
@@ -51,11 +51,11 @@
                             Chart
                         </a>
 
-                    <a href="https://sologenic.org/trade?market=534F4C4F00000000000000000000000000000000%2BrsoLo2S1kiGeCcn6hCUXVrCpGMWLrRrLZz%2FBASE" class="cursor-pointer font-medium hover:text-n-300 transition-all" target="_blank">
-                            Buy $BASED TRUMP
+                    <a href="https://app.uniswap.org/" class="cursor-pointer font-medium hover:text-n-300 transition-all" target="_blank">
+                            Buy $BASEDTRUMP
                         </a>
 
-                    <a href="https://t.me/BASED TRUMPBASE" class="cursor-pointer font-medium hover:text-n-300 transition-all" target="_blank">
+                    <a href="https://t.me/BasedTrumpOnBase" class="cursor-pointer font-medium hover:text-n-300 transition-all" target="_blank">
                             Telegram</a
                         >
                     </div>
@@ -125,7 +125,7 @@
 
 
                 
-Trumpets blare as BASED TRUMPToken strides onto the BASE stage! 🎺✨ This fun, meme-inspired token is causing ripples (pun intended) across the blockchain. With its bold vibes and quirky charm, BASED TRUMPis here to spice up the BASE ecosystem. Whether you’re a fan of memes, clever wordplay, or just love to HODL unique tokens, BASED TRUMPbrings a little drama, a lot of laughs, and the thrill of crypto to your wallet. 🚀🔥</p>
+Trumpets blare as BASED TRUMP strides onto the BASE stage! 🎺✨ This fun, meme-inspired token is causing ripples (pun intended) across the blockchain. With its bold vibes and quirky charm, BASED TRUMPis here to spice up the BASE ecosystem. Whether you’re a fan of memes, clever wordplay, or just love to HODL unique tokens, BASED TRUMPbrings a little drama, a lot of laughs, and the thrill of crypto to your wallet. 🚀🔥</p>
 
             <div class="lg:mt-10">
                 <!-- START:: 01 -->
@@ -479,7 +479,7 @@ Our team commits to clear communication and 100% transparency to make investors 
                         </h1>
 
                         <div class="flex justify-center text-5xl gap-5">
-                            <a href="https://x.com/BASED TRUMPBASE" target="_blank" rel="noopener noreferrer">
+                            <a href="https://x.com/0x47basedtrump?s=21" target="_blank" rel="noopener noreferrer">
                                 <svg
                                     stroke="currentColor"
                                     fill="currentColor"
@@ -496,7 +496,7 @@ Our team commits to clear communication and 100% transparency to make investors 
                                 </svg>
                             </a>
 
-                            <a href="https://t.me/BASED TRUMPBASE" target="_blank" rel="noopener noreferrer">
+                            <a href="https://t.me/BasedTrumpOnBase" target="_blank" rel="noopener noreferrer">
                                 <svg
                                     stroke="currentColor"
                                     fill="currentColor"
